showing more warnings and errors

--- a/appendix_silicon.tex
+++ b/appendix_silicon.tex
@@ -119,16 +119,16 @@
   \hfill
   \begin{subfigure}[t]{5.5cm}
     \includegraphics[width=\textwidth]{kulkarni_precursor_cluster}
-    \subcaption{kulkarni: Cluster von Precursorn}
+    \subcaption{kulkarni: Precursor-Cluster}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{4.5cm}
     \includegraphics[width=\textwidth]{zhang_precursor_cluster}
-    \subcaption{zhang: Cluster von Precursorn}
+    \subcaption{zhang: Reaktionen}
   \end{subfigure}
 
 
-  \caption[Cluster von Precursormolekülen]{Clusterbildung von Precursormolekülen bei 500K}
+  \caption[Cluster von Precursormolekülen]{Clusterbildung und partielle Reaktionen von Precursormolekülen bei 500K}
   \label{fig:precursorclusters}
 
 \end{figure}
