--- a/depositions.tex
+++ b/depositions.tex
@@ -32,7 +32,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
   \parbox[c]{\subcaptionwidth}{
     \subcaption{Injektions-Kammer (CVD, ALD):
       Precursorgase strömen über ein Substrat, auf dem sie durch chemische Reaktionen dünne Schichten abscheiden.
-      Nebenprodukte der Oberflächenreaktionen werden mit dem Gasstromaus dem Reaktor gespült.
+      Nebenprodukte der Oberflächenreaktionen werden mit dem Gasstrom aus dem Reaktor gespült.
     }
     \label{fig:depochamber-b}
   }
@@ -102,7 +102,7 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
 
 Physikalische Gasphasenabscheidungen (PVD, Physical Vapor Deposition) sind eine grundlegende Art von Abscheidungsprozessen, bei denen einzelne Atome nichtreaktiv auf einer Oberfläche adsorbieren.
 Zu ihnen zählt neben und Vakuum-Evaporation vor allem Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden.
-Anhand der Energien der herausschlagenden Partikel und deren \todo{Größe des?}Teilchenstroms lässt sich dabei die Wachstumsrate und Qualität des abgeschiedenen Dünnfilmes beeinflussen.
+Anhand der Energien der herausschlagenden Partikel und ihres \todo{Größe des?}Teilchenstroms lässt sich dabei die Wachstumsrate und Qualität des abgeschiedenen Dünnfilmes beeinflussen.
 Durch den statistischen Charakter der Abscheidungsorte resultiert Sputtering in Abhängigkeit des abgeschiedenen Materiales und der Umgebungsbedingungen meist in glatten Filmen\cite{svorcik_annealing_2011}, bei denen prozessbedingt keine Kontrolle der Schichtdicke im Sub-Nanometer-Bereich möglich ist.
 Gemischte Systeme wie Legierungen und mehrlagige Schichten werden durch Nutzung mehrerer Targets ermöglicht\cite{cammarata_nanoindentation_1990}.
 
@@ -130,7 +130,7 @@ Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollier
   \input{img/ald-schema.pdf_tex}
   \caption[Schema eines vollständigen ALD-Zyklus']{
     Schema eines vollständigen ALD-Zyklus':
-    Pulse von reaktiven Precursorgasen A (a) und B (c) werden durch Spül-Schritte mit intertem Gas (b), (d) von einander getrennt
+    Pulse von reaktiven Precursorgasen A (a) und B (c) zwischen Spül-Schritten mit inertem Gas (b), (d)
   }
   \label{fig:ald-schema}
 \end{figure}
