--- a/intro.tex
+++ b/intro.tex
@@ -2,6 +2,8 @@
 \chapter{Einleitung}
 \label{intro}
 
+\todo[inline]{Aktueller Stand der Technologien und damit verbundene Herausforderungen}
+
 \todo[inline]{Moore's Law? naja}
 \todo[inline]{MOSFET-Dielektrika}
 \todo[inline]{Passivation Layers}
@@ -10,7 +12,27 @@
 \todo[inline]{DFT: zu klein, nur einzelne Atome}
 \todo[inline]{MD: immer noch auf atomistischer Skala}
 \todo[inline]{KMC: gitterbasiert}
-\todo[inline]{Raten-/GPC-Vorhersagen}
-\todo[inline]{ungesättigte Zyklen}
-\todo[inline]{Substrateinfluss}
+
+
+\vspace{1em}\todo[inline]{Kandidat zur Lösung von Herausforderungen}
+
 \todo[inline]{Erforschung neuer Materialien mit atomistischer Genauigkeit}
+
+
+\vspace{1em}\todo[inline]{Zu untersuchender Aspekt des Kandidaten}
+
+
+\vspace{1em}\todo[inline]{Möglichkeiten zur Optimierung}
+
+
+\vspace{1em}\todo[inline]{sich ergebende weitere Anwendungen des Optimierten}
+
+\todo[inline]{ungesättigte Zyklen}
+\todo[inline]{Raten-/GPC-Vorhersagen}
+
+
+\vspace{1em}\todo[inline]{Anknüpfungspunkte und Fokus der Arbeit}
+
+
+\vspace{1em}\todo[inline]{Struktur der Arbeit}
+
