--- a/literature.bib
+++ b/literature.bib
@@ -220,7 +220,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 }
 
 @misc{plimpton_lammps_2014,
-	title = {{LAMMPS} Project},
+	title = {{LAMMPS} Web Page},
 	url = {http://lammps.sandia.gov/},
 	journal = {{LAMMPS} Molecular Dynamics Simulator},
 	author = {Plimpton, Steve},
@@ -1090,7 +1090,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 }
 
 @misc{case_amber_2014,
-	title = {{AMBER}},
+	title = {{AMBER} Web Page},
 	url = {http://ambermd.org/},
 	author = {Case, David and Cheatham, Tom and Merz, Ken and Roitberg, Adrian and Simmerling, Carlos and Luo, Ray and Wang, Junmei and Walker, Ross},
 	month = nov,
@@ -1098,7 +1098,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 }
 
 @misc{brooks_charmm_2014,
-	title = {{CHARMM}},
+	title = {{CHARMM} Web Page},
 	url = {http://www.charmm.org/},
 	author = {Brooks, B. R.},
 	month = nov,
@@ -1106,7 +1106,7 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 }
 
 @misc{lindahl_gromacs_2014,
-	title = {Gromacs},
+	title = {Gromacs Web Page},
 	url = {http://www.gromacs.org/},
 	author = {Lindahl, Erik and van der Spoel, David and Hess, Berk},
 	month = nov,
@@ -1132,20 +1132,6 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/DF7SP8KF/Brooks et al. - 1983 - CHARMM A program for macromolecular energy, minim.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IUSZ9W9G/abstract\;jsessionid=C5E899AEA92A1915F05E36771E1D78FD.html:text/html}
 }
 
-@incollection{mackerell_charmm:_2002,
-	title = {{CHARMM}: The Energy Function and Its Parameterization},
-	copyright = {Copyright © 2002 by John Wiley and Sons, Ltd. All rights reserved.},
-	isbn = {9780470845011},
-	shorttitle = {{CHARMM}},
-	url = {http://onlinelibrary.wiley.com/doi/10.1002/0470845015.cfa007/abstract},
-	urldate = {2014-11-05},
-	booktitle = {Encyclopedia of Computational Chemistry},
-	publisher = {John Wiley \& Sons, Ltd},
-	author = {MacKerell, Alexander D. and Brooks, Bernard and Brooks, Charles L. and Nilsson, Lennart and Roux, Benoit and Won, Youngdo and Karplus, Martin},
-	year = {2002},
-	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/MSVIJKPR/abstract.html:text/html}
-}
-
 @article{brooks_charmm:_2009,
 	title = {{CHARMM}: The biomolecular simulation program},
 	volume = {30},
@@ -1164,4 +1150,79 @@ Two classes of {ALD} processes are distinguished, [`]normal' {ALD}, in which the
 	keywords = {biomolecular simulation, biophysical computation, {CHARMM} program, energy function, Molecular dynamics, molecular mechanics, molecular modeling},
 	pages = {1545--1614},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/CENUH2EP/Brooks et al. - 2009 - CHARMM The biomolecular simulation program.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XMM55X64/full.html:text/html}
+}
+
+@article{case_amber_2005,
+	title = {The Amber biomolecular simulation programs},
+	volume = {26},
+	copyright = {Copyright © 2005 Wiley Periodicals, Inc.},
+	issn = {1096-987X},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/jcc.20290/abstract},
+	doi = {10.1002/jcc.20290},
+	abstract = {We describe the development, current features, and some directions for future development of the Amber package of computer programs. This package evolved from a program that was constructed in the late 1970s to do Assisted Model Building with Energy Refinement, and now contains a group of programs embodying a number of powerful tools of modern computational chemistry, focused on molecular dynamics and free energy calculations of proteins, nucleic acids, and carbohydrates. © 2005 Wiley Periodicals, Inc. J Comput Chem 26: 1668–1688, 2005},
+	number = {16},
+	urldate = {2014-11-06},
+	journal = {Journal of Computational Chemistry},
+	author = {Case, David A. and Cheatham, Thomas E. and Darden, Tom and Gohlke, Holger and Luo, Ray and Merz, Kenneth M. and Onufriev, Alexey and Simmerling, Carlos and Wang, Bing and Woods, Robert J.},
+	month = dec,
+	year = {2005},
+	keywords = {Amber, biomolecular simulation programs},
+	pages = {1668--1688},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ZFNGZ8RH/Case et al. - 2005 - The Amber biomolecular simulation programs.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/M4EWTNZA/full.html:text/html}
+}
+
+@article{plimpton_fast_1995,
+	title = {Fast Parallel Algorithms for Short-Range Molecular Dynamics},
+	volume = {117},
+	issn = {0021-9991},
+	url = {http://www.sciencedirect.com/science/article/pii/S002199918571039X},
+	doi = {10.1006/jcph.1995.1039},
+	abstract = {Three parallel algorithms for classical molecular dynamics are presented. The first assigns each processor a fixed subset of atoms; the second assigns each a fixed subset of inter-atomic forces to compute; the third assigns each a fixed spatial region. The algorithms are suitable for molecular dynamics models which can be difficult to parallelize efficiently—those with short-range forces where the neighbors of each atom change rapidly. They can be implemented on any distributed-memory parallel machine which allows for message-passing of data between independently executing processors. The algorithms are tested on a standard Lennard-Jones benchmark problem for system sizes ranging from 500 to 100,000,000 atoms on several parallel supercomputers--the {nCUBE} 2, Intel {iPSC}/860 and Paragon, and Cray T3D. Comparing the results to the fastest reported vectorized Cray Y-{MP} and C90 algorithm shows that the current generation of parallel machines is competitive with conventional vector supercomputers even for small problems. For large problems, the spatial algorithm achieves parallel efficiencies of 90\% and a 1840-node Intel Paragon performs up to 165 faster than a single Cray C9O processor. Trade-offs between the three algorithms and guidelines for adapting them to more complex molecular dynamics simulations are also discussed.},
+	number = {1},
+	urldate = {2014-11-06},
+	journal = {Journal of Computational Physics},
+	author = {Plimpton, Steve},
+	month = mar,
+	year = {1995},
+	pages = {1--19},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/BRVTCWXV/Plimpton - 1995 - Fast Parallel Algorithms for Short-Range Molecular.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/Z2JUGIHX/S002199918571039X.html:text/html}
+}
+
+@article{berendsen_gromacs:_1995,
+	title = {{GROMACS}: A message-passing parallel molecular dynamics implementation},
+	volume = {91},
+	issn = {0010-4655},
+	shorttitle = {{GROMACS}},
+	url = {http://www.sciencedirect.com/science/article/pii/001046559500042E},
+	doi = {10.1016/0010-4655(95)00042-E},
+	abstract = {A parallel message-passing implementation of a molecular dynamics ({MD}) program that is useful for bio(macro)molecules in aqueous environment is described. The software has been developed for a custom-designed 32-processor ring {GROMACS} ({GROningen} {MAchine} for Chemical Simulation) with communication to and from left and right neighbours, but can run on any parallel system onto which a a ring of processors can be mapped and which supports {PVM}-like block send and receive calls. The {GROMACS} software consists of a preprocessor, a parallel {MD} and energy minimization program that can use an arbitrary number of processors (including one), an optional monitor, and several analysis tools. The programs are written in {ANSI} C and available by ftp (information: gromacs@chem.rug.nl). The functionality is based on the {GROMOS} ({GROningen} {MOlecular} Simulation) package (van Gunsteren and Berendsen, 1987; {BIOMOS} B.V., Nijenborgh 4, 9747 {AG} Groningen). Conversion programs between {GROMOS} and {GROMACS} formats are included.
+
+The {MD} program can handle rectangular periodic boundary conditions with temperature and pressure scaling. The interactions that can be handled without modification are variable non-bonded pair interactions with Coulomb and Lennard-Jones or Buckingham potentials, using a twin-range cut-off based on charge groups, and fixed bonded interactions of either harmonic or constraint type for bonds and bond angles and either periodic or cosine power series interactions for dihedral angles. Special forces can be added to groups of particles (for non-equilibrium dynamics or for position restraining) or between particles (for distance restraints). The parallelism is based on particle decomposition. Interprocessor communication is largely limited to position and force distribution over the ring once per time step.},
+	number = {1–3},
+	urldate = {2014-11-06},
+	journal = {Computer Physics Communications},
+	author = {Berendsen, H. J. C. and van der Spoel, D. and van Drunen, R.},
+	month = sep,
+	year = {1995},
+	keywords = {Molecular dynamics, Parallel computing},
+	pages = {43--56},
+	file = {ScienceDirect Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8BBWR5XH/Berendsen et al. - 1995 - GROMACS A message-passing parallel molecular dyna.pdf:application/pdf;ScienceDirect Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6ABV3FMF/001046559500042E.html:text/html}
+}
+
+@article{hess_gromacs_2008,
+	title = {{GROMACS} 4: Algorithms for Highly Efficient, Load-Balanced, and Scalable Molecular Simulation},
+	volume = {4},
+	issn = {1549-9618},
+	shorttitle = {{GROMACS} 4},
+	url = {http://dx.doi.org/10.1021/ct700301q},
+	doi = {10.1021/ct700301q},
+	abstract = {Molecular simulation is an extremely useful, but computationally very expensive tool for studies of chemical and biomolecular systems. Here, we present a new implementation of our molecular simulation toolkit {GROMACS} which now both achieves extremely high performance on single processors from algorithmic optimizations and hand-coded routines and simultaneously scales very well on parallel machines. The code encompasses a minimal-communication domain decomposition algorithm, full dynamic load balancing, a state-of-the-art parallel constraint solver, and efficient virtual site algorithms that allow removal of hydrogen atom degrees of freedom to enable integration time steps up to 5 fs for atomistic simulations also in parallel. To improve the scaling properties of the common particle mesh Ewald electrostatics algorithms, we have in addition used a Multiple-Program, Multiple-Data approach, with separate node domains responsible for direct and reciprocal space interactions. Not only does this combination of algorithms enable extremely long simulations of large systems but also it provides that simulation performance on quite modest numbers of standard cluster nodes.},
+	number = {3},
+	urldate = {2014-11-06},
+	journal = {Journal of Chemical Theory and Computation},
+	author = {Hess, Berk and Kutzner, Carsten and van der Spoel, David and Lindahl, Erik},
+	month = mar,
+	year = {2008},
+	pages = {435--447},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/696FCDUB/Hess et al. - 2008 - GROMACS 4  Algorithms for Highly Efficient, Load-.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ETVRHQWF/ct700301q.html:text/html}
 }
