--- a/multilayer.tex
+++ b/multilayer.tex
@@ -55,12 +55,12 @@ Bei größeren Systemen ist zudem mit Verspannungen aufgrund der unterschiedlich
   \def\subfigwidth{7cm}
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{CuNi_profile_LAMMPS_nice}
-    \subcaption{Profil einer \ce{CuNi}-Multilage mit LAMMPS}
+    \subcaption{Profil von \ce{CuNi}-Multilagen mit LAMMPS}
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
     \includegraphics[width=\textwidth]{CuNi_profile_Parsivald}
-    \subcaption{Profil einer \ce{CuNi}-Multilage mit Parsivald}
+    \subcaption{Profil von \ce{CuNi}-Multilagen mit Parsivald}
   \end{subfigure}
   \caption{Vergleich von Multilagen-Profilen mit LAMMPS und Parsivald}
   \label{fig:multilayerresults}
