--- a/packages.tex
+++ b/packages.tex
@@ -51,12 +51,12 @@
         final,
         tracking=true,
         kerning=true,
-        spacing=true,
+%%        spacing=true,
         factor=1100,
         stretch=10,
         shrink=10
 ]{microtype}
 \usepackage[range-phrase={\,bis\,},binary-units,retain-explicit-plus]{siunitx}
 
-\usepackage{mhchem}
+\usepackage[version=3]{mhchem}
 \usepackage{cite}
