--- a/md.tex
+++ b/md.tex
@@ -178,13 +178,13 @@ Tabelle~\ref{tab:mdsoftware} stellt die wichtigsten Vertreter moderner Molekular
   \label{tab:mdsoftware}
   \begin{tabularx}{\textwidth}{|llX|}
     \hline
-    \textbf{Paket}                                                                                 & \textbf{Rechteinhaber}   & \textbf{Beschränkungen \& Kommentare}                                              \\
+    \textbf{Paket}                                                               & \textbf{Rechteinhaber}   & \textbf{Beschränkungen \& Kommentare}                            \\
     \hline
-    LAMMPS\cite{plimpton_lammps_2014}                                                              & SANDIA                   & quelloffen, Kommandozeile, Bibliothek, eigene Potentiale möglich \\
-    Materials Studio\cite{accelrys_materials_2014}                                                 & Accelrys                 & Grafische Oberfläche, lizenzpflichtig                            \\
-    AMBER\cite{case_amber_2014}                                                                    & University of California & Biomoleküle, lizenzpflichtig                                     \\
-    CHARMM\cite{brooks_charmm_2014,brooks_charmm:_1983,mackerell_charmm:_2002,brooks_charmm:_2009} & Accelrys                 & Proteine, lizenzpflichtig                                        \\
-    GROMACS\cite{lindahl_gromacs_2014}                                                             & Uppsala University       & Biomoleküle, quelloffen                                          \\
+    LAMMPS\cite{plimpton_lammps_2014,plimpton_fast_1995}                         & SANDIA                   & quelloffen, Kommandozeile, Bibliothek, eigene Potentiale möglich \\
+    Materials Studio\cite{accelrys_materials_2014}                               & Accelrys                 & Grafische Oberfläche, lizenzpflichtig                            \\
+    AMBER\cite{case_amber_2014,case_amber_2005}                                  & University of California & Biomoleküle, lizenzpflichtig                                     \\
+    CHARMM\cite{brooks_charmm_2014,brooks_charmm:_1983,brooks_charmm:_2009}      & Accelrys                 & Proteine, lizenzpflichtig                                        \\
+    GROMACS\cite{lindahl_gromacs_2014,berendsen_gromacs:_1995,hess_gromacs_2008} & Uppsala University       & Biomoleküle, quelloffen                                          \\
     \hline
   \end{tabularx}
   \todo[inline]{Link auf das LAMMPS-Paper}
