--- a/present.tex
+++ b/present.tex
@@ -42,7 +42,7 @@ Der durch unterschiedliche Bindungslängen entstehende Versatz zwischen den Kupf
 
 \subsubsection{Silizium}
 Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Einschlägen in Abhängigkeit der Einschlagsenergie.
-\todo[inline]{mehr. PVD und Oxidation / Hydroxylierung von Oberflächen}
+\todo[inline]{mehr! PVD und Oxidation / Hydroxylierung von Oberflächen}
 
 \subsubsection{Aluminiumoxid}
 Für amorphe und kristalline \ce{Al2O3}-Bulks finden sich Simulationsergebnisse von \textsc{Alvarez et al.}\cite{alvarez_computer_1995,alvarez_molecular_1992} und von \textsc{Gutierrez et al.}\cite{gutierrez_molecular_2002} sowie für \ce{Al2O3}-Oberflächen von \textsc{Adiga et al.}\cite{adiga_atomistic_2006}.
